优化SDK并升级版本至2.0.1-SNAPSHOT